src/snapshots/droid_tui__regression__visual_graph_node_cluster_faces_snapshot@graph_cable_banner_classic_40.snap
---
source: src/regression.rs
assertion_line: 3189
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: cable_banner_combos      │
└──────────────────────────────────────┘



┌Mixer─────────────────────────────────┐
│                                      │
│(unnamed)──────────╭contour───────────╮
│                   │    │             │
╭button─────────────◉╮─────┐           │
│                   ││   │ │           │
│                ┌──╰──────────────────╯
│                │   │   │ │           │
╰────────────────────╯   │ │           │
│                │       │ │           │
│────────────────│───────┘ │           │
│                │         │           │
│            ╭mixer───────────────╮    │
│            │   │         │      │    │
│            ◉───┘         └──────●    │
│            │   │                │    │
│            ╰────────────────────╯    │
│                │                     │
│                │                     │
│                │                     │
│╭clocktool───────────╮                │
││               │    │                │
││               └────●                │
││                    │                │
│╰────────────────────╯                │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | │
└──────────────────────────────────────┘
