src/snapshots/droid_tui__regression__visual_graph_node_cluster_faces_snapshot@graph_cable_banner_mono_100.snap
---
source: src/regression.rs
assertion_line: 3189
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       ┌Mixer──────────────────────────────────────────────────┐                  │
└───────────────────────│───────────────────────────────────────────────────────│──────────────────┘
                  ┌(unna│ed)───────────────┐             ╭contour─────────────╮ │
                  │     │                  │             │                    │ │
                  │ ╭button──────────────╮ │     ┌───────◉────┐               │ │
                  │ │   │                │ │     │       │    │               │ │
                  │ │   │                ●─┐─────┘       ╰────────────────────╯ │
                  │ │   │                │ │                  │                 │
                  │ ╰────────────────────╯ │                  │                 │
                  │     │                  │                  │                 │
                  └─────│──────────────────│                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │  ╭mixer───────────────╮            │
                        │                  │  │               │    │            │
                        │                  └──◉               └────●            │
                        │                     │                    │            │
                        │                     ╰────────────────────╯            │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │ ╭clocktool───────────╮                                │
                        │ │                   ││                                │
                        │ │                   └●                                │
                        │ │                    │                                │
                        │ ╰────────────────────╯                                │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 36 cols or reduce scale│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
