src/snapshots/droid_tui__regression__visual_graph_node_cluster_faces_snapshot@graph_cable_banner_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: cable_banner_combos                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────┐
│┌─┐┌────┐┐                                                            ││                                              │
││ …  CV …                                                             ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ┌Mixer────────────────────────────────┐         │
││ ││    ││                                                            ││                                    │         │
││ ││    ││                                                            ││          ╭mixer───────────────╮    │         │
││ ││    ││                                                            ││          │                    │    │         │
││ ││    ││                                                            ││╭clocktool◉──────────╮┌────────●    │         │
││ ││    ││                                                            │┌│unnamed)─│────│─│───││────────│────│─────────┐
││ ││    ││                                                            │││         ╰────────────────────╯    │         │
││ ││    ││                                                            │││  ╭button───╭contour─────────────╮ │         │
││ ││  ▶ ││                                                            ││╰────────────│───────╯│ ╭O1──────────────────╮│
││ ││  … ││                                                            ││   ◉────────┐◉───┌──────│    ┌────● │        ││
││ ││    ││                                                            ││   │        ││   │      ◉────┘    │ │        ││
││ ││    ││                                                            ││   ╰──────╭L1.1─────────│──────╮──╯ │        ││
││ ││    ││                                                            ││ ╭B1.1────│───────────╮ ╰────────────────────╯│
││ ││    ││                                                            └──│────────◉──────┘────│────────│────┘         │
││ ││    ││                                                            ││ │        │ └─────────●        │              │
││ ││    ││                                                            ││ │        ╰────────────────────╯              │
││ ││    ││                                                            ││ ╰────────────────────╯                       │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            │└──────────────────────────────────────────────┘
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
│└─┘└────┘┘                                                            ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | Renders degraded at 120 cols — use ≥ 36 cols or reduce scale | latency avg 0.0 / max 0.0 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
