src/snapshots/droid_tui__regression__visual_graph_node_cluster_faces_snapshot@graph_cable_banner_mono_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: cable_banner_combos      │
└──────────────────────────────────────┘



┌Mixer─────────────────────────────────┐
│                                      │
│(unnamed)──────────╭contour───────────╮
│                   │    │             │
╭button─────────────◉╮─────┐           │
│                   ││   │ │           │
│                ┌──╰──────────────────╯
│                │   │   │ │           │
╰────────────────────╯   │ │           │
│                │       │ │           │
│────────────────│───────┘ │           │
│                │         │           │
│            ╭mixer───────────────╮    │
│            │   │         │      │    │
│            ◉───┘         └──────●    │
│            │   │                │    │
│            ╰────────────────────╯    │
│                │                     │
│                │                     │
│                │                     │
│╭clocktool───────────╮                │
││               │    │                │
││               └────●                │
││                    │                │
│╰────────────────────╯                │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│Loaded cable_banner_combos | Renders d│
└──────────────────────────────────────┘
