src/snapshots/droid_tui__regression__visual_graph_plugin_declared_kind_snapshot@graph_plugin_declared_kind_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                ┌(unnamed)──────────────────────────────────────────────────────┐                 │
└────────────────│───────────────────────────────────────────────────────────────│─────────────────┘
                 │                                        ╭vca─────────────────╮ │
                 │                                        │                    │ │
                 │                                 ┌──────◉                    │ │
                 │                                 │      │                    │ │
                 │                                 │      ╰────────────────────╯ │
                 │                                 │                             │
                 │                                 │                             │
                 │      ╭plugkind────────────╮     │                             │
                 │      │                    │     │                             │
                 │      │                    ●─────┘                             │
                 │      │                    │                                   │
                 │      ╰────────────────────╯                                   │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │                                                               │
                 │ ╭p2b8────────────────╮                                        │
                 │ │                    │                                        │
                 │ │                    │                                        │
                 │ │                    │                                        │
                 │ ╰────────────────────╯                                        │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_plugin_cable_kind | Renders degraded at 100 cols — use ≥ 290 cols or reduce scale | l│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
