src/snapshots/droid_tui__regression__visual_graph_plugin_declared_kind_snapshot@graph_plugin_declared_kind_classic_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                DROID: graph_plugin_cable_kind                                                                │
└───────────────────────────────────────────────────────────────────────────────────────────────┌(unnamed)────────────────────────────────────────────────────┐┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐│ Graph ──────────────────────────────────────────────────────│┐
│◉◉┐                                                                                           ││ ╭plugkind────────────╮               ╭vca─────────────────╮ ││
│…0%                                                                                           ││ │                    │               │                    │ ││
││ │                                                                                           ││ │                    ●───────────────◉                    │ ││
││ │                                                                                           ││ │                    │               │                    │ ││
││ │                                                                                           ││ ╰────────────────────╯               ╰────────────────────╯ ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
│……│                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
│……│                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
│○○│                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││                                                             ││
││ │                                                                                           ││  ╭p2b8────────────────╮                                     ││
││ │                                                                                           ││  │                    │                                     ││
││ │                                                                                           ││  │                    │                                     ││
││ │                                                                                           ││  │                    │                                     ││
│└─┘                                                                                           ││  ╰────────────────────╯                                     ││
└──────────────────────────────────────────────────────────────────────────────────────────────┘│─────────────────────────────────────────────────────────────│┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_plugin_cable_kind | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) |│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
