src/snapshots/droid_tui__regression__visual_graph_plugin_declared_kind_snapshot@graph_plugin_declared_kind_classic_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
┌(unnamed)─────────────────────────────┐
│──────────────────────────────────────│
╭plugkind────────────╭vca──────────────╮
│                    │                 │
│                    ◉                 │
│                    │                 │
╰────────────────────╰─────────────────╯
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
╭p2b8────────────────╮                 │
│                    │                 │
│                    │                 │
│                    │                 │
╰────────────────────╯                 │
│                                      │
└──────────────────────────────────────┘











┌──────────────────────────────────────┐
│Loaded graph_plugin_cable_kind | Rende│
└──────────────────────────────────────┘
