src/snapshots/droid_tui__regression__visual_graph_plugin_declared_kind_snapshot@graph_plugin_declared_kind_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│──────────────────────────────────────────────────────────────────────────────────────────────────│
╭p2b8────────────────╮                                                                             │
│                    │                                                                             │
│                    │                                                                             │
│                    │                                                                             │
╰────────────────────╯                                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                             ╭vca─────────────────╮
│                                                                             │                    │
│                                                               ┌─────────────◉                    │
│                                                               │             │                    │
│                                                               │             ╰────────────────────╯
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                                                               │                                  │
│                            ╭plugkind────────────╮             │                                  │
│                            │                    │             │                                  │
│                            │                    ●─────────────┘                                  │
│                            │                    │                                                │
│                            ╰────────────────────╯                                                │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 290 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
